实现rocketmq 事务消息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.servlet.multipart.maxFileSize=2MB
 spring.servlet.multipart.maxRequestSize=2MB
 
+# rocket server
 rocketmq.name-server=127.0.0.1:9876
+# rocket ษ๚ฒ๚ื้
 rocketmq.producer.group=${rose.path}
